cmake_minimum_required(VERSION 3.10.0)
project(MathAnalytical VERSION 0.1.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
file(GLOB SOURCES "src/*.cpp")
include_directories("include")
add_library(MathAnalytical ${SOURCES})

enable_testing()
add_executable(tests tests/tests.cpp)
target_link_libraries(tests MathAnalytical)
set(TESTS Addition ArcCosine ArcSine ArcTangent Const Cosine Division Exp Multiplication NatLog Negative Pow Sine Subtraction Tangent Var)
foreach(TEST ${TESTS})
    add_test(NAME ${TEST} COMMAND tests ${TEST})
endforeach()